# ramify

./: .gitignore  .mcp.json  CLAUDE.md  KANBAN.md  README.ja.md  README.md  ROADMAP.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/workflows/: claude-review.yml  docs.yml
docs/: index.md  requirements.txt
docs/api/: core.md  mcp.md
docs/guide/: claude-review.md  mcp.md
src/ramify/: __init__.py  exceptions.py  mcp_server.py
src/ramify/core/: branch.py  command.py  session.py
src/ramify/drivers/: docker.py  git_worktree.py
src/ramify/guards/: safety.py
src/ramify/models/: result.py
src/ramify/state/: __init__.py  workspace.py
src/ramify/utils/: sanitize.py
tests/: conftest.py  test_branch.py  test_mcp_server.py  test_sanitize.py  test_session.py
var/: demo.py
